# cmake_examples

./: readme.md
flat/App/: CMakeLists.txt  vcpkg.json
flat/App/cmake/: dependencies.cmake  logger.cpp.in
flat/App/subModule2/: subModule.h
flat/libA/: CMakeLists.txt  CMakePresets.json
flat/libA/cmake/: build_flags.cmake
flat/libA/docs/: CMakeLists.txt
flat/libA/priSubModule/: priSubModule.h
flat/libA/pubSubModule/: pubSubModule.cpp
flat/libA/tests/: main.cpp
flat/libB/: CMakeLists.txt  CMakePresets.json
flat/libB/cmake/: build_flags.cmake  gen_files.cmake  strip_symboles.cmake
flat/libB/pubSubModule/: pubSubModule.h
flat_v/: clean.sh
flat_v/App/cmake/: build_flags.cmake  cpack_.cmake  cpack_rpm.cmake  install.cmake  version.cpp.in
flat_v/App/tests/: CMakeLists.txt  main.cpp
flat_v/cpack/: cpack_.cmake
flat_v/libA/: CMakeLists.txt  lib.cpp  lib.h
flat_v/libA/cmake/: build_flags.cmake  config.cmake.in  gen_files.cmake  install.cmake
flat_v/libA/pubSubModule/: pubSubModule.h
flat_v/libA/tests/: CMakeLists.txt
flat_v/libB/: CMakeLists.txt  lib.cpp
flat_v/libB/cmake/: build_flags.cmake  cmake_flags.cmake  version.h.in
flat_v/libB/priSubModule/: priSubModule.h
flat_v/libB/tests/: CMakeLists.txt
src/: CMakePresets.json  build.bat  build.sh
src/App/: CMakeLists.txt  CMakePresets.json
src/App/cmake/: build_flags.cmake  gen_files.cmake  strip_symboles.cmake
src/App/src/: CMakeLists.txt  main.cpp
src/App/src/subModule1/: subModule.h
src/App/src/subModule2/: CMakeLists.txt
src/App/tests/: CMakeLists.txt
src/cpack/: cpack_.cmake
src/libA/: CMakeLists.txt  vcpkg.json
src/libA/cmake/: build_flags.cmake  cpack_.cmake  cpack_deb.cmake
src/libA/docs/: CMakeLists.txt
src/libA/src/libA/: CMakeLists.txt  lib.cpp
src/libA/src/libA/priSubModule/: CMakeLists.txt  priSubModule.cpp
src/libA/tests/: CMakeLists.txt
src/libB/: CMakeLists.txt  vcpkg.json
src/libB/cmake/: build_flags.cmake  gen_files.cmake  logger.cpp.in  logger.h.in
src/libB/src/libB/: CMakeLists.txt  lib.cpp
src/libB/src/libB/priSubModule/: priSubModule.cpp
src/libB/src/libB/pubSubModule/: CMakeLists.txt  pubSubModule.cpp
src/libB/tests/: CMakeLists.txt
src_v/: CMakeLists.txt  clean.sh
src_v/App/: vcpkg-configuration.json
src_v/App/cmake/: build_flags.cmake  config.h.in  cpack_archive.cmake
src_v/App/src/subModule1/: subModule.cpp
src_v/App/src/subModule2/: subModule.cpp
src_v/cpack/: cpack_nsis.cmake
src_v/libA/: .gitignore  CMakeLists.txt  CMakePresets.json
src_v/libA/cmake/: build_flags.cmake  gen_files.cmake  install.cmake  logger.cpp.in  logger_severity.cmake
src_v/libA/docs/: front_page.md
src_v/libA/src/libA/: CMakeLists.txt
src_v/libA/src/libA/pubSubModule/: pubSubModule.cpp
src_v/libB/: .gitignore  CMakeLists.txt  vcpkg-configuration.json
src_v/libB/cmake/: build_flags.cmake  config.cmake.in  dependencies.cmake  install.cmake  version.cpp.in
src_v/libB/src/libB/: CMakeLists.txt  lib.h
src_v/libB/src/libB/pubSubModule/: pubSubModule.cpp
src_v/libB/tests/: main.cpp
superbuild/: CMakePresets.json
